--- a/public/search.html
+++ b/public/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>주소 검색</title>
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <style>
         html, body {
             margin: 0;
